src/modules/commons/components/base-list/base-list.scss
@import "src/styles/theme";

table {
  width: 100%;
}

.checkbox-padding {
  padding-right: 16px;
}

tr.item-row.row-checked {
  background-color: lighten($dark-focused, 50%);
}

.row-disabled td {
  color: $warn;
}

tr.item-row:hover {
  background-color: lighten($dark-focused, 25%);
}

tr.item-row:nth-child(4n+1):hover {
  background-color: $dark-focused;
}

tr.item-row:not(.row-checked):nth-child(4n+1) {
  background-color: lighten($dark-focused, 80%);
}

.mat-row.no-interaction {
  cursor: default;
  background-color: inherit;
}

tr.preview-row {
  height: 0;
}

.item-row td {
  border-bottom-width: 0;
}

.preview {
  overflow: hidden;
  display: flex;
}

.mat-column-name {
  padding-right: 10px;
  max-width: 0px;
  width: 50%;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.mat-column-description {
  padding-right: 10px;
  max-width: 0px;
  width: 50%;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;

}

